--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,11 @@
+/* === Bootsprat override === */
+
+.btn-link {
+    padding: 0;
+}
+
+/* ===== */
+
 .alert-container {
     position: fixed;
     top: 10px;
@@ -7,4 +15,9 @@
 
 .cursor-pointer {
     cursor: pointer;
+}
+
+.table-actions {
+    display: flex;
+    justify-content: flex-start;
 }
